--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -4,6 +4,7 @@ title: "🏢 Open WebUI for Enterprises"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
+import { Testimonals } from "@site/src/components/Testimonals";
 
 <TopBanners />
 
@@ -28,6 +29,8 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 ![users](/images/enterprise/users.png)
 <sub className=" text-xs">*Open WebUI is used by developers from the mentioned organizations and institutions.*</sub>
 
+
+<Testimonals />
 
 ## **Let’s Talk**  
 
