--- a/docs/security.mdx
+++ b/docs/security.mdx
@@ -3,6 +3,10 @@ sidebar_position: 1500
 title: "🔒 Security Policy"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 At Open WebUI, safeguarding the security and confidentiality of user data is our foremost concern. Our technical architecture and development processes are designed to minimize vulnerabilities and uphold the trust our stakeholders place in us. Regular assessments, codebase vetting, and systematic adoption of best practice methodologies ensure that security remains a central part of our project lifecycle.
 
 We employ a mixture of automated and manual techniques to keep up with evolving threats, and are continuously improving our approach, including plans to integrate advanced static and dependency analysis tools. The focus is always on proactive risk management and responsible handling of any vulnerabilities reported.
