--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -29,6 +29,8 @@ We take your trust seriously. We want Open WebUI to stay **empowering and access
 
 ## Open WebUI License: Explained
 
+
+
 **Effective with v0.6.6 (April 19, 2025):**
 
 Open WebUI’s license is now:
@@ -42,6 +44,10 @@ Open WebUI’s license is now:
 
 - **All code submitted/merged to the codebase up to and including release v0.6.5 remains BSD-3 licensed** (no branding requirement applies for that legacy code).
 - **CLA required for new contributions** after v0.6.5 (v0.6.6+) under the updated license.
+
+:::tip 
+**TL;DR: Want to use Open WebUI for free? Just keep the branding.**
+:::
 
 This is not legal advice—refer to the full [LICENSE](https://github.com/open-webui/open-webui/blob/main/LICENSE) for exact language.
 
@@ -194,11 +200,6 @@ Please ensure your request includes your institution, the research purpose, and 
 
 ---
 
-### **TL;DR: Want to use Open WebUI for free? Just keep the branding.**
-
-- **No hidden costs, no trickery.**
-- **If you want to remove or rebrand, let's talk—contributions and partnerships welcomed.**
-
 #### Example Fork Branding Disclosure
 
 If you operate a public fork, or a paid SaaS, and retain the Open WebUI branding:
@@ -215,3 +216,61 @@ If you are a business that needs private or custom branding, advanced white-labe
 
 **Contact [sales@openwebui.com](mailto:sales@openwebui.com) for more information about commercial options.**
 
+
+---
+
+## Branding, Attribution, and Customization Guidelines: What’s Allowed (and What’s Not)
+
+We want to make it as straightforward as possible for everyone, users, businesses, integrators, and contributors, to follow Open WebUI’s fair-use branding policy. **Transparency is key.** Here’s a simple, practical guide:
+
+- The Open WebUI NAME and LOGO must remain in their original, prominent locations throughout the application and user interface, including, but not limited to, the site header, sidebar, login screens, about page, and any other area where Open WebUI branding appears by default.
+- ALL visual “Open WebUI” elements, logos, wordmarks, “About”/“Help” links, and any system/credits screens, must remain unmodified and fully visible.
+- You must NOT obscure, overlay, or minimize Open WebUI branding in any way that de-emphasizes its identity, or suggests your build is the “official” one when it isn’t.
+- Side-by-side branding: If, with approval, you add your own logo next to “Open WebUI,” the Open WebUI logo must always appear first (left or top), be fully visible, and your logo must be smaller and secondary. This is rarely allowed without a commercial license.
+
+### **What is (Typically) ALLOWED Without a License**
+
+| Scenario | Allowed Without License? | Guidance / Notes |
+|---|:---:|---|
+| **Use Open WebUI “as is” with branding** | ✅ | Just use the software as provided; no changes to logo, name, or identity. Easiest option! |
+| **Add custom features, UI extensions, plugins while keeping Open WebUI branding fully intact** | ✅ | Absolutely encouraged! You can add new buttons, workflows, extensions, etc.—just don’t remove or alter Open WebUI’s own name and logo. |
+| **Deploy to any number of internal users within your own organization (with all official branding kept)** | ✅ | Scale however you like! No per-user limits for internal/staff/company-wide use as long as Open WebUI branding is always present and prominent. |
+| **Integrate Open WebUI with internal tools, scripts, or enterprise authentication** | ✅ | SSO, LDAP, custom backends—all welcomed! Integration is wide open, provided branding remains. |
+| **Add a small, unobtrusive info banner at top, bottom, or side (e.g., “Managed by YourOrg”)** | ✅ | Banner must be visually secondary/subordinate (footer, bottom-right, etc.), not obscuring or distracting from Open WebUI’s branding. |
+| **Add a legal or company link/notice in the About modal/dialog** | ✅ | Feel free to provide an additional legal link, team contact, or credits section—just never replace or remove Open WebUI credits. |
+| **Add monitoring, analytics, or custom backend features** | ✅ | Backend integrations and observability are totally permitted. No restrictions if branding/UI is untouched. |
+| **Create and maintain your own public fork (with all branding, plus “fork disclosure” notice)** | ✅ | As long as you keep branding as required and clearly state it’s “a fork of Open WebUI, not official.” |
+| **Link to your company/project/github in the footer or About box** | ✅ | No problem if subordinate—must not give impression of replacing or rebranding the app. |
+| **For deployments ≤50 users/rolling 30-day period** | ✅ | “Small scale” deployments may remove Open WebUI branding, but only under the explicit user count threshold—see policy for details. |
+
+
+### **What is NOT ALLOWED Without an Enterprise/Proprietary License**
+
+| Scenario                            | Allowed Without License? | Why NOT Allowed/Details                                              |
+|--------------------------------------|:------------------------:|----------------------------------------------------------------------|
+| Removing **ANY** Open WebUI logo/name from the UI |      ❌        | This is a clear violation, even if you add “Powered by Open WebUI” somewhere else.  |
+| Modifying/changing the Open WebUI logo or color scheme to your branding |  ❌  | The identity must remain clear and intact. No recoloring or swaps.     |
+| Adding your logo side-by-side/equal in size or priority | ❌         | Your logo must NEVER be bigger or more prominent than Open WebUI. If you place them adjacent, we must approve it, and Open WebUI always comes first, both visually and hierarchically. |
+| Calling your fork “Open WebUI Enterprise” or misleadingly similar | ❌         | Don’t use our project’s name or branding in a way that could confuse users about source or official status. |
+| Major UI modifications that move, minimize, or obscure original Open WebUI branding | ❌ | Moving the logo, shrinking it, hiding it, or pushing it offscreen violates the terms. |
+| White-labelling for your business/SaaS                        | ❌        | You MUST get an enterprise or proprietary license before removing our branding for mass redistribution or resale.  |
+| “Powered by Open WebUI” credit ONLY (if all native branding is hidden/removed) | ❌ | This is NOT enough and does not meet license terms. |
+
+### **How to Add Custom Branding Responsibly**
+
+- **DO NOT remove, shrink, relocate, or recolor Open WebUI branding.**
+- **If allowed (within limits!), your addition must appear in a secondary/footer area**—always clearly subordinate in visual hierarchy to Open WebUI’s own logo and name, and never replacing or overshadowing our original branding.
+- **If you want to add a “Managed by Company X” banner**, it must remain clearly distinct, unobtrusive, and subordinate to Open WebUI’s own visual hierarchy.
+- **Don’t “co-brand” or sandwich your logo next to ours** without explicit written approval. For nearly all non-trivial cases, you will need a commercial or custom license.  
+- **Always show us a screenshot before launch!** If in doubt, email [hello@openwebui.com](mailto:hello@openwebui.com)—we’re happy to review and advise.
+
+### **Still Unsure?**
+
+If you’re ever unsure, please feel free to contact us and share your planned deployment (even just a screenshot or Figma mockup) before launching. Our goal is to work with everyone and support honest, respectful uses—we’re always happy to offer guidance or help you with the right license if needed. Openness and fairness for all is important to us, so let’s collaborate to make it work for everyone.
+
+---
+
+*This page is provided for informational purposes only and does not constitute legal advice. For exact and legally binding terms, refer to the full text of the [LICENSE](https://github.com/open-webui/open-webui/blob/main/LICENSE).*
+
+
+**Thank you for respecting the Open WebUI community, our contributors, and our project’s future.**
