--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -198,7 +198,7 @@ Please note: _This exemption is intended **exclusively for research studies**, n
 
 **Absolutely—academic research matters to us!** If you are a non-profit or academic institution running a **research study** and require branding changes (removal, customization, or white-labeling) for study purposes, **please email us at [hello@openwebui.com](mailto:hello@openwebui.com) with details about your project**. We review these requests on a case-by-case basis. We’re committed to supporting research, and _in almost all cases, we gladly grant permission for branding customizations or exemptions to facilitate your academic study—just ask!_  
 
-Please ensure your request includes your institution, the research purpose, and expected duration/scale of your deployment. We’re here to help you advance open, reproducible science!
+Please ensure your request includes **your institution, the research purpose, and expected duration/scale of your deployment.** We’re here to help you advance open, reproducible science!
 
 ---
 
