--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -196,9 +196,28 @@ Otherwise, you must retain branding and clearly say your fork isn't the official
 Please note: _This exemption is intended **exclusively for research studies**, not for general-purpose or ongoing institutional use._  
 :::
 
-**Absolutely—academic research matters to us!** If you are a non-profit or academic institution running a **research study** and require branding changes (removal, customization, or white-labeling) for study purposes, **please email us at [hello@openwebui.com](mailto:hello@openwebui.com) with details about your project**. We review these requests on a case-by-case basis. We’re committed to supporting research, and _in almost all cases, we gladly grant permission for branding customizations or exemptions to facilitate your academic study—just ask!_  
+**Absolutely—academic research matters to us!** If you’re a researcher at a non-profit or academic institution conducting a **specific, time-limited research project** (for example: a user study, clinical trial, or classroom experiment), you may request permission to **remove or customize Open WebUI branding** for the duration of your study. **This is intended for single, well-defined research projects**—not for regular, day-to-day platform use across a department or lab.
 
-Please ensure your request includes **your institution, the research purpose, and expected duration/scale of your deployment.** We’re here to help you advance open, reproducible science!
+To apply:  
+Send an email to [hello@openwebui.com](mailto:hello@openwebui.com) describing:
+- Your institution/department  
+- The purpose and description of your research study  
+- The planned start/end dates or study duration  
+- The expected scale (example: number of participants, research group size)  
+
+We review requests individually and, in almost all cases, will grant permission for branding changes to support your research.
+
+**Example approved use cases:**  
+- Conducting a one-quarter psychology experiment involving students  
+- Running a clinical user acceptance study within a hospital for five weeks  
+- Field-testing model interaction in a history course for one semester  
+
+**Not eligible:**  
+- Removing branding for ongoing departmental use, internal tooling, or public university portals  
+- “White-labeling” for all organization users beyond a research study scope
+
+We’re happy to help make Open WebUI accessible for your research—just ask!
+
 
 ---
 
