--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -199,7 +199,8 @@ Please note: _This exemption is intended **exclusively for research studies**, n
 **Absolutely—academic research matters to us!** If you’re a researcher at a non-profit or academic institution conducting a **specific, time-limited research project** (for example: a user study, clinical trial, or classroom experiment), you may request permission to **remove or customize Open WebUI branding** for the duration of your study. **This is intended for single, well-defined research projects**—not for regular, day-to-day platform use across a department or lab.
 
 To apply:  
-Send an email to [hello@openwebui.com](mailto:hello@openwebui.com) describing:
+Please email us at [research@openwebui.com](mailto:research@openwebui.com) and use the subject line:  
+`Research Exemption Request – [Your Institution]`
 - Your institution/department  
 - The purpose and description of your research study  
 - The planned start/end dates or study duration  
