--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -36,7 +36,7 @@ To help us respond quickly and efficiently to your inquiry, **please use your of
 :::
 
 
-📧 **sales@openwebui.com** — Send us your **team size**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
+📧 **sales@openwebui.com** — Send us your deployment **user count (seats)**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
 
 Take your AI strategy to the next level with our **premium enterprise solutions**, crafted for organizations that demand **expert consulting, tailored deployment, and dedicated support.**  
 
