--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -199,7 +199,7 @@ We are incredibly grateful for the generous support of our sponsors. Their contr
 
 We are deeply grateful for the generous grant support provided by:
 
-<div className="flex flex-col gap-4 items-start">
+<div className="grid gap-4 items-start grid-cols-1 md:grid-cols-2">
 
   <a href="https://a16z.com/advancing-open-source-ai-through-benchmarks-and-bold-experimentation/" title="A16z Open Source AI Grant 2025" target="_blank" rel="noopener" className="flex flex-col w-fit gap-2 items-center">
     <img src="/sponsors/grants/a16z.png" alt="A16z" width={"300px"} style={{verticalAlign:'middle',marginRight:'12px'}} />
