--- a/docs/features/sso/index.mdx
+++ b/docs/features/sso/index.mdx
@@ -21,6 +21,13 @@ It is highly recommended to check the environment variable page, to get more det
 
 :::
 
+:::danger
+
+Right now, you can only configure one OAUTH provider at a time.
+You cannot have Microsoft **and** Google as providers simultaneously.
+
+:::
+
 ## OAuth
 
 There are several global configuration options for OAuth in general:
