--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -50,7 +50,16 @@ If you are a **consulting agency**, **AI services provider**, or **reseller**, p
 
 🔗 **[Apply Here](https://forms.gle/SemdgxjFXpHmdCby6)**  
 
-We evaluate all applications to ensure alignment with our **mission, vision, and values**, selecting only those partners best suited for our ecosystem.  
+Please understand:
+
+- We proactively select partners who align with our mission, vision, and values.
+- Being on our waitlist does not guarantee a response. If we feel there’s a strong fit, you’ll hear from us.
+- We receive a high volume of requests and cannot respond to every inquiry. Please do not follow up or send additional messages.
+- We prioritize mature organizations, companies less than 3 years old are not eligible, except in truly exceptional cases.
+- Our program is currently at full capacity. We will reach out at our discretion should an opportunity arise.
+
+Thank you for your understanding and respect for our process.
+
 :::
 
 
