--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -17,7 +17,7 @@ But with Open WebUI’s rapid growth and success, we started seeing a pattern we
 That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license remains permissive, BSD-3-based, but now adds a fair-use branding protection clause**. This update does **not** impact genuine users, contributors, or anyone who simply wants to use the software in good faith. If you’re a real contributor, a small team, or an organization adopting Open WebUI for internal use—**nothing changes for you**. This change **only affects those who intend to exploit the project’s goodwill**: stripping away its identity, falsely representing it, and never giving back.
 
 In plain terms:  
-- **Open WebUI is still free, open source, and permissively licensed.**
+- **Open WebUI is still free and permissively licensed.**
 - **You can still use, modify, and redistribute it for any purpose—just don’t remove or alter our branding unless you meet one of three clear criteria (see below).**
 - **The original BSD-3 license continues to apply for all contributions made to the codebase up to and including release v0.6.5.**
 
