--- a/docs/features/sso/index.mdx
+++ b/docs/features/sso/index.mdx
@@ -49,7 +49,7 @@ The following environment variables are required:
 
 1. `GOOGLE_CLIENT_ID` - Google OAuth client ID
 1. `GOOGLE_CLIENT_SECRET` - Google OAuth client secret
-1. `OPENID_PROVIDER_URL` - Must be set for logout to work properly.
+1. `OPENID_PROVIDER_URL` - Usually set to `https://accounts.google.com/.well-known/openid-configuration` for logout to work properly.
 
 ### Microsoft
 
