--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -148,13 +148,21 @@ Once `uv` is installed, running Open WebUI is a breeze. Use the command below, e
   $env:DATA_DIR="C:\open-webui\data"; uvx --python 3.11 open-webui@latest serve
   ```
 
+:::note 
+**For PostgreSQL Support:**
 
+The default installation now uses a slimmed-down package. If you need **PostgreSQL support**, install with all optional dependencies:
+
+```bash
+pip install open-webui[all]
+```
+:::
 
 ### Installation with `pip`
 
 For users installing Open WebUI with Python's package manager `pip`, **it is strongly recommended to use Python runtime managers like `uv` or `conda`**. These tools help manage Python environments effectively and avoid conflicts. 
 
-Python 3.11 is the development environment. Python 3.12 seems to work but has not been thoroughly tested. Python 3.13 is entirely untested—**use at your own risk**.
+Python 3.11 is the development environment. Python 3.12 seems to work but has not been thoroughly tested. Python 3.13 is entirely untested and some dependencies do not work with Python 3.13 yet—**use at your own risk**.
 
 1. **Install Open WebUI**:  
 
